# vulkan-triangle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_debug.sh
src/: main.c  vk_check.h  vk_debug.h  vk_extensions.h  vk_instance.h  vk_physical_device.h  vk_queue_families.h  vk_setup.h  vk_validation.h
